kiali-3001/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
  namespace: bookinfo
spec:
  gateways:
    - foobar-gateway
  hosts:
  - foo.example.com
  http:
  - name: "bar"
    match:
    - uri:
        prefix: "/bar"
    route:
    - destination:
        host: bar.bookinfo.svc.cluster.local
        subset: v2
  - name: "foo"
    match:
    - uri:
        prefix: "/foo"
    route:
    - destination:
        host: bar.vms.svc.cluster.local
        subset: v1
